Sat Nov  1 06:45:00 1997  Richard Frith-Macdonald  <richard@brainstorm.co.uk>

        * src/NSDistributedLock: New OPENSTEP class implementation.
	* src/GNUmakefile: Add new class to list.
	
        * src/NSFileManager: implemented method ([-removeFileAtPath:handler:])

        * src/NSString.m: Added two new (OPENSTEP) methods -
        ([-fileSystemRepresentation]) and
        ([-fileSystemRepresentation:maxLength:])

        * src/NSUserDefaults.m: ([-synchronize]) modified to do locking
        using NSDistributedLock

        * src/Foundation/NSDistributedLock.h: New OPENSTEP class definition.

        * src/Foundation/NSString.h: Added two new (OPENSTEP) methods.

Fri Oct 31 17:00:29 1997  Adam Fedor  <fedor@doc.com>

	* GNUmakefile (DIST_FILES): Update files.
	* src/GNUmakefile: Likewise.
	* checks/GNUmakefile: Likewise.
	* examples/GNUmakefile: Likewise.
	* doc/GNUmakefile: Likewise.
	* admin/GNUmakefile: Likewise.
	* NSCharacterSets/GNUmakefile: Likewise.
	* NSTimeZones/GNUmakefile: Likewise.
	* Tools/GNUmakefile: Likewise.
	* Tools/Makefile.postamble (copy-dist): New target.
	
Fri Oct 31 15:16:46 1997  Adam Fedor  <fedor@doc.com>

	* NSBundle.README: Removed obsolete file.
	* README.threads: Likewise.
	* RELEASE-NOTES: Likewise.
	* GNUmakefile: Remove obsolete files from DIST. Make Tools the
	second build target.

	* Tools/GNUmakefile: Include tool.make and make dread, etc as
	tools. 
	* Tools/Makefile.preamble: Add uninstalled includes and libraries
	from ../src.

	* Tools/dremove.m: Add errno.h.

	* doc/GNUmakefile: Remove unneeded top-level text files.
	* doc/announce.texi: Update.
	* doc/install.texi: Likewise.
	* doc/news.texi: Likewise.
	* doc/readme.texi: Likewise.
	* doc/todo.texi: Likewise.

Fri Oct 31 10:26:16 1997  Adam Fedor  <fedor@doc.com>

	* GNUmakefile: Renamed from Makefile.
	* src/GNUmakefile: Likewise.
	* checks/GNUmakefile: Likewise.
	* examples/GNUmakefile: Likewise.
	* doc/GNUmakefile: Likewise.
	* admin/GNUmakefile: Likewise.