@@ -1,0 +1,48 @@
+/* Interface for NSDistributedLock for GNUStep
+   Copyright (C) 1997 Free Software Foundation, Inc.
+
+   Written by:  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+   Date: 1997
+
+   This file is part of the GNUstep Base Library.
+
+   This library is free software; you can redistribute it and/or
+   modify it under the terms of the GNU Library General Public
+   License as published by the Free Software Foundation; either
+   version 2 of the License, or (at your option) any later version.
+
+   This library is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+   Library General Public License for more details.
+
+   You should have received a copy of the GNU Library General Public
+   License along with this library; if not, write to the Free
+   Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+   */
+
+#ifndef __NSDistributedLock_h_GNUSTEP_BASE_INCLUDE
+#define __NSDistributedLock_h_GNUSTEP_BASE_INCLUDE
+
+#include <Foundation/NSObject.h>
+#include <Foundation/NSString.h>
+#include <Foundation/NSDate.h>
+
+@interface NSDistributedLock : NSObject
+{
+    NSString	*lockPath;
+    NSDate	*lockTime;
+}
+
++ (NSDistributedLock*)lockWithPath: (NSString*)aPath;
+- (NSDistributedLock*)initWithPath: (NSString*)aPath;
+
+- (void)breakLock;
+- (NSDate*)lockDate;
+- (BOOL)tryLock;
+- (void)unlock;
+
+
+@end
+
+#endif /* __NSDistributedLock_h_GNUSTEP_BASE_INCLUDE */
